<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/headerDraw"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="100"
        android:title="@string/action_settings"

        app:showAsAction="always|withText" />
    <item
        android:id="@+id/menu_login"
        android:icon="@drawable/baseline_people_black_18dp"
        android:orderInCategory="1"
        android:title="@string/perfil"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/menu_usuario1"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="1"
        android:title="@string/perfil"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/boton_mapa"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:orderInCategory="1"
        android:title="@string/map"/>
    <item
        android:id="@+id/contactar"
        android:onClick="llamarTelefono"
        android:orderInCategory="100"
        android:title="@string/contact"
        app:showAsAction="never" />
</menu>